--- a/demo/index.html
+++ b/demo/index.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-        <div id="main"></div>
+        <div id="main">
+            <div id="prompt">
+                Drop OBJ file here
+            </div>
+        </div>
 </body>
 
 <script src="./build/script.js"></script>
