--- a/demo/index.html
+++ b/demo/index.html
@@ -10,9 +10,9 @@
 
 <body>
         <div id="main">
-            <div id="prompt">
+            <!--<div id="prompt">
                 Drop OBJ file here
-            </div>
+            </div>-->
         </div>
 </body>
 
