Parsing metadata, ui

--- a/demo/index.html
+++ b/demo/index.html
@@ -10,9 +10,7 @@
 
 <body>
         <div id="main">
-            <!--<div id="prompt">
-                Drop OBJ file here
-            </div>-->
+            <div id="loader"></div>
         </div>
 </body>
 
