--- a/demo/index.html
+++ b/demo/index.html
@@ -10,7 +10,10 @@
 
 <body>
         <div id="main">
+            <div id="sidebar"></div>
+            <div id="settings"></div>
             <div id="loader"></div>
+            <div id="error"></div>
         </div>
 </body>
 
