--- a/demo/index.html
+++ b/demo/index.html
@@ -14,6 +14,7 @@
             <div id="settings"></div>
             <div id="loader"></div>
             <div id="error"></div>
+            <div id="support"><a href="https://github.com/vojtatom/metacity/issues">Report a problem</a></div>
         </div>
 </body>
 
