--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <title>Hello World!</title>
     <link rel="stylesheet" href="index.css">
+    <script src="build/script.js"></script>
   </head>
   <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
+    <div id="editor">
+      <svg width="100%" height="100%" id="svgeditor"></svg>
+    </div>
+    <div id="3dview"></div>
   </body>
 </html>
