--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Hello World!</title>
     <link rel="stylesheet" href="index.css">
-    <script src="build/script.js"></script>
+    <script src="run/script.js"></script>
   </head>
   <body>
     <div id="editor">
