--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,12 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <title>MetaCity</title>
     <link rel="stylesheet" href="index.css">
     <script src="run/script.js"></script>
   </head>
   <body>
-    <div id="editor">
-      <svg width="100%" height="100%" id="svgeditor"></svg>
-    </div>
-    <div id="3dview"></div>
+    <div id="editor"></div>
+    <div id="d3view"></div>
   </body>
 </html>
