Refactoring complete UI

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
     <script src="run/script.js"></script>
   </head>
   <body>
-    <div id="editor"></div>
+    <div id="main"></div>
   </body>
 </html>
